2026-02-16  Bart Schaefer  <schaefer@zsh.org>

	* Philippe: 54122: Src/builtin.c, Test/K01nameref.ztst: avoid
	warnings for valid nameref options

	* Philippe: 54063: Src/Modules/param_private.c, Src/builtin.c,
	Src/params.c, Src/zsh.h, Test/K01nameref.ztst: Simplifications
	for resolve_nameref() and setscope()

2026-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Doc/Zsh/compsys.yo: fix a format error introduced
	by worker/53821

2025-12-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53959+54149: Src/glob.c, Test/D02glob.ztst: when redirecting
	to/from a pattern (MULTIOS) and if there is no match, issue an
	error even if NULL_GLOB is in effect.

2025-12-16  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: 54148: Completion/Debian/Command/_apt:
	use same set of options for apt as with apt-get

	* Aidan Van Duyne: 54143: Src/Zle/zle_bindings.c,
	Doc/Zsh/zle.yo: Bind '_' to vi-first-non-blank in vicmd keymap

	* 54147: Src/Zle/termquery.c: avoid buffer overflow with
	terminal sequences

2025-11-30  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: 54117: update apt completion

	* 54119: Src/Zle/termquery.c: fix OSC52 clipboard get with
	empty clipboard

2025-11-27  Oliver Kiddle  <opk@zsh.org>

	* unposted (c.f. Bart: 54112): Src/params.c: remove Unicode

2025-11-24  Oliver Kiddle  <opk@zsh.org>

	* Philippe: 54093 (tweaked per 54101): Src/Modules/db_gdbm.c,
	Src/Modules/mapfile.c, Src/Modules/parameter.c,
	Src/Modules/zutil.c, Src/Zle/complete.c, Src/Zle/zle_main.c,
	Src/Zle/zle_params.c, Src/builtin.c, Src/glob.c, Src/params.c,
	Src/subst.c, Src/zsh.h: Cleanup isarr fields and variables

	* 54104: Src/parse.c, Src/zsh.h: fix bug with packing strings
	into wordcode

	* 54103: Src/builtin.c, Src/parse.c, Test/C02cond.ztst:
	support > and < comparisons via the test builtin

	* 54094: Completion/Unix/Command/_base64,
	Completion/Unix/Command/_basename, Completion/Unix/Command/_cat,